# learning-wgpu

./: .gitignore  Cargo.toml  README.md
apps/sandbox/: Cargo.toml  index.html  index.js  styles.css
apps/sandbox/src/: lib.rs  main.rs  pipeline.rs  shader.wgsl  state.rs  vertex.rs
apps/sandbox/src/shaders/: shader.wgsl
engine/: Cargo.toml
engine/src/: lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
