[package]
name = "sandbox"
version = "0.0.1"
edition = "2021"

[dependencies]
cfg-if = "1"
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.20.0"
winit = { version = "0.30", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.20.0", features = ["webgl"]}
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}

[lib]
crate-type = ["cdylib", "rlib"]
