[package]
name = "sandbox"
version = "0.0.1"
authors = ["Vasile Campeanu <https://github.com/vasilecampeanu>"]
edition = "2021"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.19.3"
winit = { version = "0.29", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
